# gorex

./: README.md  autogen.sh  configure.ac
data/: Makefile.am  gorex.desktop
data/icons/: Makefile.am
src/: Makefile.am  gorex-app-menu.ui  gorex-application.c  gorex-application.h  gorex-main.c  gorex-window.c  gorex-window.h  gorex-window.ui  gorex.gresource.xml
